small device fix

--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -40,11 +40,10 @@
             <h1 class="header1">Projects</h1>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4 row_pr pConAnim">
-            <div class="col" >
+            <div class="col">
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/trintelV4_transparentB.jpg" class="img_pr"
-                            alt="Trintel Logo" />
+                        <img src="../../img/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -63,22 +62,22 @@
             </div>
             <div class="col">
                 <!--<a class="a_ref" href="">-->
-                    <div class="card card_pr">
-                        <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-auto">
-                                    <h5 class="header_prMain">AR Process-Documentation</h5>
-                                </div>
-                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
-                                </div>
+                <div class="card card_pr">
+                    <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-auto">
+                                <h5 class="header_prMain">AR Process-Documentation</h5>
                             </div>
-                            <p class="text_pr">
-                                This is my bachelors thesis in which i developed Augmented Reality Tools to 
-                                Document Processes in logistics.
-                            </p>
+                            <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
+                            </div>
                         </div>
+                        <p class="text_pr">
+                            This is my bachelors thesis in which i developed Augmented Reality Tools to
+                            Document Processes in logistics.
+                        </p>
                     </div>
+                </div>
                 <!--</a>-->
             </div>
             <div class="col">
@@ -94,7 +93,8 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                My own public cloud based on Nextcloud, offering a variety of functions from normal storage over a mail client to 
+                                My own public cloud based on Nextcloud, offering a variety of functions from normal
+                                storage over a mail client to
                                 little apps such as a canban board.
                             </p>
                         </div>
@@ -124,7 +124,7 @@
             <div class="col">
                 <a class="a_ref" href="./webpage_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/pk_logo_green.png" class="img_pr" alt="Los Angeles Skyscrapers" />
+                        <img src="../../img/PKLLogoBewerbung.png" class="img_pr" alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -151,7 +151,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is a prototype for a concept application to begin with flutter. 
+                                This is a prototype for a concept application to begin with flutter.
                                 Originally it was a student project.
                             </p>
                         </div>
@@ -189,7 +189,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                Here I deployed my own Homeserver for all my Smart Home Devices. 
+                                Here I deployed my own Homeserver for all my Smart Home Devices.
                                 It runs locally on a raspberry pi.
                             </p>
                         </div>
@@ -204,7 +204,6 @@
         </head>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-            </script>
+        </script>
 </body>
-
 </html>
