--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="container max-w-screen-xl row_pr p-5">
+  <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
         <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
@@ -47,14 +47,15 @@
         Self-Hosted Homeserver
       </h1>
     </div>
-    <div class="m-3 p-4 projectAnim2">
+    
+    <div class="mb-5 projectAnim2">
       <img src="../../img/homeassistant/HomAD.png" class="d-block w-100 rounded2 zoomD" alt="...">
     </div>
 
     <div id="lightbox"> </div>
 
     <div class="projectAnim3">
-      <div class="card m-5 card_pr">
+      <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">About the Project</h5>
         <div class="card-body">
           <h5 class="card-title">Task</h5>
@@ -73,14 +74,14 @@
         </div>
       </div>
 
-      <div class="card m-5 card_pr">
+      <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Source Project</h5>
         <div class="card-body">
           <p class="card-text"><a href="https://www.home-assistant.io/">https://www.home-assistant.io/</a></p>
         </div>
       </div>
 
-      <div class="card m-5 card_pr">
+      <div class="card mb-5 card_pr">
         <h5 class="card-header header_pr">Components</h5>
         <div class="card-body">
           <div>
@@ -109,7 +110,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-  <script src="/html/functions/pageAnimations.js"></script>
+  <script src="/html/functions/imageAnimation.js"></script>
 </body>
 
 </html>
