--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="container max-w-screen-xl row_pr p-5">
+    <div class="container max-w-screen-xl row_pr">
         <div class="projectAnim1">
             <div class="alignCenter">
                 <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
@@ -47,7 +47,7 @@
                 Privacy First Home Assistant
             </h1>
         </div>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide mb-5 projectAnim2" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -86,7 +86,7 @@
         <div id="lightbox"> </div>
 
         <div class="projectAnim3">
-            <div class="card m-5 card_pr">
+            <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">About the Project</h5>
                 <div class="card-body">
                     <h5 class="card-title">Task</h5>
@@ -104,7 +104,7 @@
                 </div>
             </div>
 
-            <div class="card m-5 card_pr">
+            <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Source Project</h5>
                 <div class="card-body">
                     <h5 class="card-title">Homepage</h5>
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-            <div class="card m-5 card_pr">
+            <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Components</h5>
                 <div class="card-body">
                     <div>
@@ -140,7 +140,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
-    <script src="/html/functions/pageAnimations.js"></script>
+    <script src="/html/functions/imageAnimation.js"></script>
 </body>
 
 </html>
