--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -14,188 +14,191 @@
 </head>
 
 <body>
+  <div class="container max-w-screen-xl row_pr">
+    <div class="projectAnim1">
+      <div class="alignCenter">
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      </div>
 
-  <div class="projectAnim1">
-    <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
-    </div>
-
-    <div class="container_ref">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="card_Ac">
-            <a class="a_ref" href="../../index.html">
-              <h1 class="text_navlink p-2 m-2"> Profile </h1>
-            </a>
+      <div class="container_ref">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="card_Ac">
+              <a class="a_ref" href="../../index.html">
+                <h1 class="text_navlink p-2 m-2"> Profile </h1>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-auto">
-          <div class="card_NavDeac">
-            <a class="a_ref" href="./projects.html">
-              <h1 class="text-white p-2 m-2">Projects</h1>
-            </a>
+          <div class="col-auto">
+            <div class="card_NavDeac">
+              <a class="a_ref" href="./projects.html">
+                <h1 class="text-white p-2 m-2">Projects</h1>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+
+
+      <h1 class="header1">
+        NudelCloud
+      </h1>
+      <h1 class="header2">
+        Privacy Cloud
+      </h1>
     </div>
 
 
-    <h1 class="header1">
-      NudelCloud
-    </h1>
-    <h1 class="header2">
-      Privacy Cloud
-    </h1>
+    <div class="container max-w-screen-xl row_pr">
+      <div id="carouselExampleDark" class="carousel carousel-dark mb-5 slide projectAnim2" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+      </div>
+
+      <div id="lightbox"> </div>
+
+      <div class="projectAnim3">
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">Online Instance</h5>
+          <div class="card-body">
+            <p class="card-text"><a href="https://cloud.philoklemenz.de/">cloud.philoklemenz.de</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">About the Project</h5>
+          <div class="card-body">
+            <h5 class="card-title">Task</h5>
+            <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
+            </p>
+            <h5 class="card-title">Functionality</h5>
+            <p class="card-text">
+              This Cloud Storage is selfhosted in on a german cloud server to get the best of both sides being
+              performance
+              and privacy. Furthermore Nextcloud offers a lot of extra features from an email client, office tools,
+              calender and
+              a lot more. Im Using it as my Hub for everything important during my daily routine. For more information:
+            </p>
+            <a href="https://nextcloud.com/athome/">nextcloud.com/athome/</a>
+          </div>
+        </div>
+
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">Source Project</h5>
+          <div class="card-body">
+            <h5 class="card-title">Source Project</h5>
+            <p class="card-text"><a href="https://nextcloud.com/" style="text-decoration: none;">nextcloud.com/</a>
+            </p>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">GitHub</h5>
+            <p class="card-text"><a href="https://github.com/nextcloud/server"
+                style="text-decoration: none;">github.com/nextcloud/server</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">Components</h5>
+          <div class="card-body">
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 m-3">PHP</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:61.0%" aria-valuenow="60.1"
+                  aria-valuemin="0" aria-valuemax="100">61.0%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:34.1%" aria-valuenow="34.1"
+                  aria-valuemin="0" aria-valuemax="100">34.1%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Vue</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:2.1%" aria-valuenow="2.1" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">2.1%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Gherkin</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:1.4%" aria-valuenow="1.4" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">1.4%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">SCSS</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:0.6%" aria-valuenow="0.6" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">0.6%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">0.3%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.5" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">0.5%</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
+      </footer>
+    </div>
   </div>
-
-  
-  <div class="container max-w-screen-xl row_pr p-5">
-    <div id="carouselExampleDark" class="carousel carousel-dark slide m-5 projectAnim2" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      </button>
-      <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      </button>
-    </div>
-
-    <div id="lightbox"> </div>
-
-    <div class="projectAnim3">
-      <div class="card m-5 card_pr">
-        <h5 class="card-header header_pr">Online Instance</h5>
-        <div class="card-body">
-          <p class="card-text"><a href="https://cloud.philoklemenz.de/">cloud.philoklemenz.de</a>
-          </p>
-        </div>
-      </div>
-
-      <div class="card m-5 card_pr">
-        <h5 class="card-header header_pr">About the Project</h5>
-        <div class="card-body">
-          <h5 class="card-title">Task</h5>
-          <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
-          </p>
-          <h5 class="card-title">Functionality</h5>
-          <p class="card-text">
-            This Cloud Storage is selfhosted in on a german cloud server to get the best of both sides being performance
-            and privacy. Furthermore Nextcloud offers a lot of extra features from an email client, office tools,
-            calender and
-            a lot more. Im Using it as my Hub for everything important during my daily routine. For more information:
-          </p>
-          <a href="https://nextcloud.com/athome/">nextcloud.com/athome/</a>
-        </div>
-      </div>
-
-      <div class="card m-5 card_pr">
-        <h5 class="card-header header_pr">Source Project</h5>
-        <div class="card-body">
-          <h5 class="card-title">Source Project</h5>
-          <p class="card-text"><a href="https://nextcloud.com/" style="text-decoration: none;">nextcloud.com/</a>
-          </p>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">GitHub</h5>
-          <p class="card-text"><a href="https://github.com/nextcloud/server"
-              style="text-decoration: none;">github.com/nextcloud/server</a>
-          </p>
-        </div>
-      </div>
-
-      <div class="card m-5 card_pr">
-        <h5 class="card-header header_pr">Components</h5>
-        <div class="card-body">
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 m-3">PHP</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:61.0%" aria-valuenow="60.1" aria-valuemin="0"
-                aria-valuemax="100">61.0%</div>
-            </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:34.1%" aria-valuenow="34.1" aria-valuemin="0"
-                aria-valuemax="100">34.1%</div>
-            </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Vue</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:2.1%" aria-valuenow="2.1" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">2.1%</div>
-            </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Gherkin</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:1.4%" aria-valuenow="1.4" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">1.4%</div>
-            </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">SCSS</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:0.6%" aria-valuenow="0.6" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">0.6%</div>
-            </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">0.3%</div>
-            </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.5" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">0.5%</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <footer>
-    <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
-  </footer>
-  </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-  <script src="/html/functions/pageAnimations.js"></script>
+  <script src="/html/functions/imageAnimation.js"></script>
 </body>
 
 </html>
