--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container max-w-screen-xl p-5">
+    <div class="container max-w-screen-xl pt-5">
         <div class="containerAnimRev">
             <div class="alignCenter">
                 <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
