--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -10,7 +10,7 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="shortcut icon" href="/img/LogogpRofil.ico">
+  <link rel="shortcut icon" href="/img/LogoGreenRounded.ico">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-      <h1 class="header1">HomeAssistant</h1>
+      <h1 class="header1">NudelHome</h1>
       <h1 class="header2">Self-Hosted Homeserver</h1>
     </div>
     <div class="mb-5 projectAnim2">
