pre release fix

--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -109,7 +109,7 @@
         <div class="card-body">
           <h5 class="card-title">Task</h5>
           <p class="card-text">
-            The task of this project consisted in building a website for the RBZ Kiel. The customer
+            The task of this project was to build a website for the RBZ Kiel. The customer
             wanted a software to support their students in their Business Simulation by monitoring their transactions
             with their imaginary business. We had two weeks to complete this task and present it to the RBZ.
           </p>
@@ -132,7 +132,7 @@
           </p>
           <h5 class="card-title">GitHub</h5>
           <p class="card-text"><a href="https://github.com/Nudel4ufl4uf/trintel"
-              style="text-decoration: none;">https://ithub.com/Nudel4ufl4uf/trintel</a>
+              style="text-decoration: none;">https://github.com/Nudel4ufl4uf/trintel</a>
           </p>
         </div>
       </div>
@@ -146,7 +146,7 @@
             <a href="https://git.informatik.uni-kiel.de/stu223691" style="text-decoration: none;">Iben, Jan-Philip; </a>
             <a href="https://github.com/Nudel4ufl4uf" style="text-decoration: none;">Klemenz, Philo; </a>
             <a href="https://github.com/b3z" style="text-decoration: none;">Mayer, Luca; </a>
-            <a href="https://github.com/Felioh" style="text-decoration: none;">Ohnesroge, Felix; </a>
+            <a href="https://github.com/Felioh" style="text-decoration: none;">Ohnesorge, Felix; </a>
             <a href="https://github.com/cwerl" style="text-decoration: none;">Werl, Christopher; </a>
             <a href="https://github.com/MaxWiendl" style="text-decoration: none;">Wiendl, Max; </a>
           </p>
