--- a/html/pages/homeassistant_project.html
+++ b/html/pages/homeassistant_project.html
@@ -51,18 +51,20 @@
         <div class="card-body">
           <h5 class="card-title">Task</h5>
           <p class="card-text">
-            The idea of this project was to deploy my own home server for all my smart home devices locally on a Raspberry Pi.
+            The idea of this project was to deploy my own home server locally for all my smart home devices on a Raspberry Pi.
           </p>
           <h5 class="card-title">Functionality</h5>
           <p class="card-text">             
             This self-hosted home server provides the benefits of a much faster connection among all
             smart home devices. Furthermore, because of the local approach, no data gets passed through data centers in
-            the cloud, which opens up a whole new way of privacy. In companion with the Mycroft project, I can also
+            the cloud, which opens up a whole new way of privacy. In companion with the <a href="/html/pages/mycroft_project.html">Mycroft project</a>, I can also
             control all my devices through voice commands. With this combination, I can fully replace the Google
             Services or other cloud providers for smart home. The downside of this approach is the fact that it is impossible to reach the 
             system from outside the network without any special customization. This limits the system to specific automations
             and other functionality that require data from outside the network. Nevertheless, the improved privacy and security 
-            is more important to my because all the core requirements to the system are met.
+            is more important to me because all the core requirements to the system are met. 
+            Because of the open-source community the possibilities of functions and styles are endless result in 
+            a never ending improvement cycle.
           </p>
         </div>
       </div>
