--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -52,7 +52,7 @@
             <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD" alt="Cloud Login Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">LogIn Page.</h5>
-            <p class="text_prWhite">Login to the cloud with different users.</p>
+            <p class="text_prWhite">Log into the cloud with different users.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -83,7 +83,7 @@
         <div class="card mb-5 card_pr">
           <h5 class="card-header header_pr">Online Instance</h5>
           <div class="card-body">
-            <p class="card-text"><a href="https://cloud.philoklemenz.de/">cloud.philoklemenz.de</a>
+            <p class="card-text"><a href="https://cloud.philoklemenz.de/">https://cloud.philoklemenz.de</a>
             </p>
           </div>
         </div>
@@ -95,10 +95,12 @@
             </p>
             <h5 class="card-title">Functionality</h5>
             <p class="card-text">
-              This Cloud Storage is selfhosted in a german cloud server to get the best of both sides being
-              performance and privacy. Furthermore Nextcloud offers a lot of extra features such as an email client, 
-              office tools, calender and a lot more. Im Using it as my Hub for everything important during my 
-              daily routine. For more information:
+              This Cloud-Storage is selfhosted at a german server provider to get the best of both sides being
+              performance and privacy. Due to the location being in the EU the data protection law is a lot better 
+              than all the other providers such as Google or Microsoft wich are hosting in the USA. Furthermore 
+              Nextcloud is open-source and offers a lot of extra features such as an email client, 
+              office tools, calender and a lot more. I am Using it as my Hub for everything important during my 
+              daily routine. For more information visit:
             </p>
             <a href="https://nextcloud.com/athome/">https://nextcloud.com/athome/</a>
           </div>
