--- a/html/pages/webpage_project.html
+++ b/html/pages/webpage_project.html
@@ -49,7 +49,7 @@
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Online Instance</h5>
                 <div class="card-body">
-                    <p class="card-text"><a href="https://profile.philoklemenz.de/">profile.philoklemenz.de/</a></p>
+                    <p class="card-text"><a href="https://profile.philoklemenz.de/">https://profile.philoklemenz.de/</a></p>
                 </div>
             </div>
             <div class="card mb-5 card_pr">
