--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -17,7 +17,7 @@
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
+        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
       </div>
       <div class="container_ref">
         <div class="row justify-content-center">
@@ -36,141 +36,153 @@
             </div>
           </div>
         </div>
+        <h1 class="header1">Nudelsearch</h1>
+        <h1 class="header2">Privacy Search Engine</h1>
       </div>
-      <h1 class="header1">Nudelsearch</h1>
-      <h1 class="header2">Privacy Search Engine</h1>
-    </div>
-    <div id="carouselExampleDark" class="carousel carousel-dark slide mb-5 projectAnim2" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../img/nudelsearch/nudelsearch_home.png" class="d-block w-100 rounded2" alt="Nudelsearch Home Image>
-          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide mb-5 projectAnim2" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button btn-dark" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button btn-dark" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../img/nudelsearch/nudelsearch_home.png" class="d-block w-100 rounded2"
+              alt="Nudelsearch Home Image">
+          </div>
+          <div class="carousel-item">
+            <img src="../../img/nudelsearch/nudelsearch_search.png" class="d-block w-100 rounded2"
+              alt="Nudelsearch Search Result Image">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="../../img/nudelsearch/nudelsearch_search.png" class="d-block w-100 rounded2" alt="Nudelsearch Search Result Image">
-          <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-          </div>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      </button>
-      <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      </button>
-    </div>
-    <!-- Box for fullscreen view of image! -->
-    <div id="lightbox"> </div>
-    <div class="projectAnim3">
-      <div class="card mb-5 card_pr">
-        <h5 class="card-header header_pr">Online Instance</h5>
-        <div class="card-body">
-          <p class="card-text"><a href="https://search.philoklemenz.de/">https://search.philoklemenz.de/</a></p>
-        </div>
-      </div>
-      <div class="card mb-5 card_pr">
-        <h5 class="card-header header_pr">About the Project</h5>
-        <div class="card-body">
-          <h5 class="card-title">Task</h5>
-          <p class="card-text">With this little project, I have deployed my own search engine based on Searchxng.</p>
-          <h5 class="card-title">Functionality</h5>
-          <p class="card-text">
-            At the moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
-            it on my Raspberry Pi. Due to problems with my DSL Connection Type (DSLite), this has to wait. Even though the performance of this
-            engine is not the same as google's engine, but has the big benefit of full privacy. Furthermore, this machine
-            shows you results from all possible engines on the web and shows them all together. The core idea of searnxg is to
-            send encrypted requests to engines on the web and present the answers to the user. With this methode, none of
-            the other engines has viable information about you, they can sell. For more Information, check out the wiki:
-          </p>
-          <a href="https://search.philoklemenz.de/info/de/about">https://search.philoklemenz.de/info/de/about</a>
-        </div>
-      </div>
-      <div class="card mb-5 card_pr">
-        <h5 class="card-header header_pr">Source Project</h5>
-        <div class="card-body">
+      <!-- Box for fullscreen view of image! -->
+      <div id="lightbox"> </div>
+      <div class="projectAnim3">
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">Online Instance</h5>
           <div class="card-body">
-            <h5 class="card-title">Wiki</h5>
-            <p class="card-text"><a href="https://docs.searxng.org/"
-                style="text-decoration: none;">https://docs.searxng.org/</a>
-            </p>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">GitHub</h5>
-            <p class="card-text"><a href="https://github.com/searxng"
-                style="text-decoration: none;">https://github.com/searxng</a>
-            </p>
+            <p class="card-text"><a href="https://search.philoklemenz.de/">https://search.philoklemenz.de/</a></p>
           </div>
         </div>
-      </div>
-      <div class="card mb-5 card_pr">
-        <h5 class="card-header header_pr">Components</h5>
-        <div class="card-body">
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Python</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:70.1%" aria-valuenow="70.1" aria-valuemin="0"
-                aria-valuemax="100">70.1%</div>
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">About the Project</h5>
+          <div class="card-body">
+            <h5 class="card-title">Task</h5>
+            <p class="card-text">With this little project, I have deployed my own search engine based on Searchxng.
+            </p>
+            <h5 class="card-title">Functionality</h5>
+            <p class="card-text">
+              At the moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
+              it on my Raspberry Pi. Due to problems with my DSL Connection Type (DSLite), this has to wait. Even
+              though
+              the performance of this
+              engine is not the same as google's engine, but has the big benefit of full privacy. Furthermore, this
+              machine
+              shows you results from all possible engines on the web and shows them all together. The core idea of
+              searnxg
+              is to
+              send encrypted requests to engines on the web and present the answers to the user. With this methode,
+              none
+              of
+              the other engines has viable information about you, they can sell. For more Information, check out the
+              wiki:
+            </p>
+            <a href="https://search.philoklemenz.de/info/de/about">https://search.philoklemenz.de/info/de/about</a>
+          </div>
+        </div>
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">Source Project</h5>
+          <div class="card-body">
+            <div class="card-body">
+              <h5 class="card-title">Wiki</h5>
+              <p class="card-text"><a href="https://docs.searxng.org/"
+                  style="text-decoration: none;">https://docs.searxng.org/</a>
+              </p>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">GitHub</h5>
+              <p class="card-text"><a href="https://github.com/searxng"
+                  style="text-decoration: none;">https://github.com/searxng</a>
+              </p>
             </div>
           </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:12.8%" aria-valuenow="12.8" aria-valuemin="0"
-                aria-valuemax="100">12.8%</div>
+        </div>
+        <div class="card mb-5 card_pr">
+          <h5 class="card-header header_pr">Components</h5>
+          <div class="card-body">
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Python</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:70.1%" aria-valuenow="70.1"
+                  aria-valuemin="0" aria-valuemax="100">70.1%</div>
+              </div>
             </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:6.4%" aria-valuenow="6.4" aria-valuemin="0"
-                aria-valuemax="100">6.4%</div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:12.8%" aria-valuenow="12.8"
+                  aria-valuemin="0" aria-valuemax="100">12.8%</div>
+              </div>
             </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Less</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:5.7%" aria-valuenow="5.7" aria-valuemin="0"
-                aria-valuemax="100">5.7%</div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:6.4%" aria-valuenow="6.4" aria-valuemin="0"
+                  aria-valuemax="100">6.4%</div>
+              </div>
             </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:3.0%" aria-valuenow="3.0" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">3.0%</div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Less</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:5.7%" aria-valuenow="5.7" aria-valuemin="0"
+                  aria-valuemax="100">5.7%</div>
+              </div>
             </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:1.1%" aria-valuenow="1.1" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">1.1%</div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:3.0%" aria-valuenow="3.0" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">3.0%</div>
+              </div>
             </div>
-          </div>
-          <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
-            <div class="progress m-3">
-              <div class="progress-bar" role="progressbar" style="--value:0.9%%" aria-valuenow="0.9" aria-valuemin="0"
-                aria-valuemax="100"></div>
-              <div class="px-2">0.9%</div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:1.1%" aria-valuenow="1.1" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">1.1%</div>
+              </div>
+            </div>
+            <div>
+              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
+              <div class="progress m-3">
+                <div class="progress-bar" role="progressbar" style="--value:0.9%%" aria-valuenow="0.9" aria-valuemin="0"
+                  aria-valuemax="100"></div>
+                <div class="px-2">0.9%</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <p class="footer headerAnim">© Philo Klemenz 2022</p>
-  </footer>
-  </head>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="/html/functions/imageAnimation.js"></script>
+    <footer>
+      <p class="footer headerAnim">© Philo Klemenz 2022</p>
+    </footer>
+    </head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+    <script src="/html/functions/imageAnimation.js"></script>
 </body>
+
 </html>
