--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -53,7 +53,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is my bachelor thesis in which i developed Augmented Reality Tools to
+                                This is my bachelor thesis in which i developed Augmented-Reality-Tools to
                                 document processes in logistics.
                             </p>
                         </div>
@@ -67,7 +67,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_prMain">Nudelcloud</h5>
+                                    <h5 class="header_prMain">NudelCloud</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
                                 </div>
@@ -87,14 +87,14 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_prMain">Nudelsearch</h5>
+                                    <h5 class="header_prMain">NudelSearch</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
                                 My own public search engine based on Searxng. I deployed this solution due to privacy
-                                concerns and security.
+                                concerns and security reasons.
                             </p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                Here I deployed my own Homeserver for all my Smart Home Devices.
+                                Here I deployed my own Homeserver for all my Smart-Home-Devices.
                                 It runs locally on a raspberry pi.
                             </p>
                         </div>
