last commit on branch for now

--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -91,7 +91,7 @@
           <h5 class="card-header header_pr">About the Project</h5>
           <div class="card-body">
             <h5 class="card-title">Task</h5>
-            <p class="card-text">With this little project, I have deployed my own cloud based on Nextcloud.
+            <p class="card-text">With this little project, I have deployed my own cloud, based on Nextcloud.
             </p>
             <h5 class="card-title">Functionality</h5>
             <p class="card-text">
