--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -166,7 +166,7 @@
             <div>
               <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
               <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:0.9%%" aria-valuenow="0.9" aria-valuemin="0"
+                <div class="progress-bar" role="progressbar" style="--value:0.9%" aria-valuenow="0.9" aria-valuemin="0"
                   aria-valuemax="100"></div>
                 <div class="px-2">0.9%</div>
               </div>
