--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -17,7 +17,7 @@
     <div class="container max-w-screen-xl row_pr">
         <div class="projectAnim1">
             <div class="alignCenter">
-                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
+                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
             </div>
             <div class="container_ref">
                 <div class="row justify-content-center">
@@ -49,23 +49,29 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2 zoomD" alt="Mycorft Image Homepage">
+                    <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2 zoomD"
+                        alt="Mycorft Image Homepage">
                     <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
                         <h5 class="header_pr">Webpage</h5>
-                        <p class="text_prWhite">This is the Web GUI, but nearly everything is controlled via the terminal.</p>
+                        <p class="text_prWhite">This is the Web GUI, but nearly everything is controlled via the
+                            terminal.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2 zoomD" alt="Mycroft Image Terminal">
+                    <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2 zoomD"
+                        alt="Mycroft Image Terminal">
                     <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
                         <h5 class="text-white">Terminal-GUI</h5>
-                        <p class="text_prWhite">Here you can see the terminal GUI that shows your interactions in a visual manner.</p>
+                        <p class="text_prWhite">Here you can see the terminal GUI that shows your interactions in a
+                            visual manner.</p>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 </button>
-                <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
             </div>
@@ -82,11 +88,14 @@
                     </p>
                     <h5 class="card-title">Functionality</h5>
                     <p class="card-text">I transformed my Raspberry Pi into a Home Assistant, replacing my Google home
-                        because of privacy concerns. After plugging in my external microphone and speaker and installing 
-                        the Mycroft distribution, I had to go through all the setup steps. Due to the great number of 
-                        settings, I was able to customize Mycroft to my personal requirements. After a long debug session and 
-                        all the setup of all my services such as the Home Assistant it worked perfectly fine. The downsides of this 
-                        more private solution are some more delay, not the best compatibility  with external resources and a not to
+                        because of privacy concerns. After plugging in my external microphone and speaker and installing
+                        the Mycroft distribution, I had to go through all the setup steps. Due to the great number of
+                        settings, I was able to customize Mycroft to my personal requirements. After a long debug
+                        session and
+                        all the setup of all my services such as the Home Assistant it worked perfectly fine. The
+                        downsides of this
+                        more private solution are some more delay, not the best compatibility with external resources
+                        and a not to
                         perfect voice of the assistant.
                     </p>
                 </div>
@@ -95,21 +104,46 @@
                 <h5 class="card-header header_pr">Source Project</h5>
                 <div class="card-body">
                     <h5 class="card-title">Homepage</h5>
-                    <p class="card-text"><a href="https://mycroft.ai/" style="text-decoration: none;">mycroft.ai/</a></p>
+                    <p class="card-text"><a href="https://mycroft.ai/"
+                            style="text-decoration: none;">https://mycroft.ai/</a></p>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">GitHub</h5>
-                    <p class="card-text"><a href="https://github.com/MycroftAI" style="text-decoration: none;">github.com/MycroftAI</a></p>
+                    <p class="card-text"><a href="https://github.com/MycroftAI"
+                            style="text-decoration: none;">https://github.com/MycroftAI</a></p>
                 </div>
             </div>
             <div class="card mb-5 card_pr">
                 <h5 class="card-header header_pr">Components</h5>
                 <div class="card-body">
                     <div>
-                        <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Linux</h3>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Python</h3>
                         <div class="progress m-3">
-                            <div class="progress-bar" role="progressbar" style="--value:100.0%" aria-valuenow="100.0"
-                                aria-valuemin="0" aria-valuemax="100">100.0%</div>
+                            <div class="progress-bar" role="progressbar" style="--value:92.6%" aria-valuenow="92.6"
+                                aria-valuemin="0" aria-valuemax="100">92.6%</div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
+                        <div class="progress m-3">
+                            <div class="progress-bar" role="progressbar" style="--value:5.8%" aria-valuenow="5.8"
+                                aria-valuemin="0" aria-valuemax="100">5.8%</div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">QML</h3>
+                        <div class="progress m-3">
+                            <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="1.3"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="px-2">1.3%</div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Dockerfile</h3>
+                        <div class="progress m-3">
+                            <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="px-2">0.3%</div>
                         </div>
                     </div>
                 </div>
@@ -120,7 +154,10 @@
         <p class="footer headerAnim">© Philo Klemenz 2022</p>
     </footer>
     </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="/html/functions/imageAnimation.js"></script>
 </body>
+
 </html>
