--- a/html/pages/ProcessDokuBa_project.html
+++ b/html/pages/ProcessDokuBa_project.html
@@ -160,14 +160,16 @@
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Python</h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:6.3%" aria-valuenow="6.3" aria-valuemin="0"
-                aria-valuemax="100">6.3%</div>
+                aria-valuemax="100"></div>
+              <div class="px-2">6.3%</div>
             </div>
           </div>
           <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">ShaderLab</h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:3.1%" aria-valuenow="3.1" aria-valuemin="0"
-                aria-valuemax="100">3.1%</div>
+                aria-valuemax="100"></div>
+              <div class="px-2">3.1%</div>
             </div>
           </div>
           <div>
@@ -181,6 +183,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   <footer>
     <p class="footer headerAnim">© Philo Klemenz 2022</p>
