--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -127,7 +127,8 @@
                         <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
                         <div class="progress m-3">
                             <div class="progress-bar" role="progressbar" style="--value:5.8%" aria-valuenow="5.8"
-                                aria-valuemin="0" aria-valuemax="100">5.8%</div>
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="px-2">5.8%</div>
                         </div>
                     </div>
                     <div>
@@ -149,6 +150,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <footer>
         <p class="footer headerAnim">© Philo Klemenz 2022</p>
