--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -83,18 +83,14 @@
             <p class="card-text">
               At the moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy
               it on my Raspberry Pi. Due to problems with my DSL Connection Type (DSLite), this has to wait. Even
-              though
-              the performance of this
-              engine is not the same as google's engine, but has the big benefit of full privacy. Furthermore, this
-              machine
-              shows you results from all possible engines on the web and shows them all together. The core idea of
-              searnxg
-              is to
-              send encrypted requests to engines on the web and present the answers to the user. With this methode,
-              none
-              of
-              the other engines has viable information about you, they can sell. For more Information, check out the
-              wiki:
+              though the performance of this engine is not the same as google's engine, but has the big benefit of full
+              privacy.
+              Furthermore, this machine shows you results from all possible engines on the web and shows them all
+              together.
+              The core idea of searnxg is to send encrypted requests to engines on the web and present the answers to
+              the user.
+              With this methode, none of the other engines has viable information about you, they can sell. For more
+              Information, check out the wiki:
             </p>
             <a href="https://search.philoklemenz.de/info/de/about">https://search.philoklemenz.de/info/de/about</a>
           </div>
@@ -102,18 +98,14 @@
         <div class="card mb-5 card_pr">
           <h5 class="card-header header_pr">Source Project</h5>
           <div class="card-body">
-            <div class="card-body">
-              <h5 class="card-title">Wiki</h5>
-              <p class="card-text"><a href="https://docs.searxng.org/"
-                  style="text-decoration: none;">https://docs.searxng.org/</a>
-              </p>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">GitHub</h5>
-              <p class="card-text"><a href="https://github.com/searxng"
-                  style="text-decoration: none;">https://github.com/searxng</a>
-              </p>
-            </div>
+            <h5 class="card-title">Wiki</h5>
+            <p class="card-text"><a href="https://docs.searxng.org/"
+                style="text-decoration: none;">https://docs.searxng.org/</a>
+            </p>
+            <h5 class="card-title">GitHub</h5>
+            <p class="card-text"><a href="https://github.com/searxng"
+                style="text-decoration: none;">https://github.com/searxng</a>
+            </p>
           </div>
         </div>
         <div class="card mb-5 card_pr">
@@ -137,14 +129,16 @@
               <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
               <div class="progress m-3">
                 <div class="progress-bar" role="progressbar" style="--value:6.4%" aria-valuenow="6.4" aria-valuemin="0"
-                  aria-valuemax="100">6.4%</div>
+                  aria-valuemax="100"></div>
+                <div class="px-2">6.4%</div>
               </div>
             </div>
             <div>
               <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Less</h3>
               <div class="progress m-3">
                 <div class="progress-bar" role="progressbar" style="--value:5.7%" aria-valuenow="5.7" aria-valuemin="0"
-                  aria-valuemax="100">5.7%</div>
+                  aria-valuemax="100"></div>
+                <div class="px-2">5.7%</div>
               </div>
             </div>
             <div>
@@ -175,14 +169,15 @@
         </div>
       </div>
     </div>
-    <footer>
-      <p class="footer headerAnim">© Philo Klemenz 2022</p>
-    </footer>
-    </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
-    <script src="/html/functions/imageAnimation.js"></script>
+  </div>
+  <footer>
+    <p class="footer headerAnim">© Philo Klemenz 2022</p>
+  </footer>
+  </head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="/html/functions/imageAnimation.js"></script>
 </body>
 
-</html>
+</html>  
