--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -118,21 +118,8 @@
             Our software provides the basic features like user roles with different interfaces, as
             well as the Companies and their transactions. A user is then able to perform transactions with their company and
             get feedback from the software in the form of statistics, sales history or order confirmation. In addition, it
-            is possible for the administrator to adjust the entire simulation.
-          </p>
-        </div>
-      </div>
-      <div class="card mb-5 card_pr">
-        <h5 class="card-header header_pr">Repository</h5>
-        <div class="card-body">
-          <h5 class="card-title">GitLab</h5>
-          <p class="card-text"><a
-              href="https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017"
-              style="text-decoration: none;">https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017</a>
-          </p>
-          <h5 class="card-title">GitHub</h5>
-          <p class="card-text"><a href="https://github.com/Nudel4ufl4uf/trintel"
-              style="text-decoration: none;">https://github.com/Nudel4ufl4uf/trintel</a>
+            is possible for the administrator to adjust the entire simulation. This description fits the projects functions until the 
+            01.04.2022. After that date the project was continued with a few changes from a smaller team.
           </p>
         </div>
       </div>
