--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
     </div>
 
     <h1 class="header1">Philo Klemenz</h1>
-    <h1 class="header2">aka Nudelauflauf</h1>
+    <div class="d-none d-lg-block">
+      <h1 class="header2">aka Nudelauflauf</h1>
+    </div>
+    <div class="d-block d-lg-none">
+      <h1 class="header2Small">aka Nudelauflauf</h1>
+    </div>
 
-    <div class="container-link">
-      <!--Block for Link Items in Device Size = Large only!-->
-      <div class="d-none d-lg-block">
+    <div class="d-none d-lg-block">
+      <div class="container-link">
+        <!--Block for Link Items in Device Size = Large only!-->
         <ul>
           <li>
             <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
@@ -68,37 +73,34 @@
           </li>
         </ul>
       </div>
-
-      <!--Block for Link Items in Device Size < Large only!-->
-      <div class="d-block d-lg-none">
-        <ul class="list-group list-group-horizontal d-flex justify-content-center">
-          <li class="list-group-item-light">
-            <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
-          </li>
-          <li class="list-group-item-light">
-            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a>
-          </li>
-        </ul>
-        <ul class="list-group list-group-horizontal d-flex justify-content-center">
-          <li class="list-group-item-light">
-            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a>
-          </li>
-          <li class="list-group-item-light">
-            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a>
-          </li>
-        </ul>
-        <ul class="list-group list-group-horizontal  justify-content-center">
-          <li class="list-group-item-light">
-            <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
-                class="fab fa-spotify icon"></i></a>
-          </li>
-          <li class="list-group-item-light">
-            <a
-              href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
-                class="fab fa-soundcloud icon"></i></a>
-          </li>
-        </ul>
-      </div>
+    </div>
+    <!--Block for Link Items in Device Size < Large only!-->
+    <div class="d-block d-lg-none">
+      <ul class="list-group list-group-horizontal d-flex justify-content-center">
+        <li class="list-group-item-light">
+          <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
+        </li>
+        <li class="list-group-item-light">
+          <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a>
+        </li>
+        <li class="list-group-item-light">
+          <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a>
+        </li>
+      </ul>
+      <ul class="list-group list-group-horizontal d-flex justify-content-center">
+        <li class="list-group-item-light">
+          <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a>
+        </li>
+        <li class="list-group-item-light">
+          <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
+              class="fab fa-spotify icon"></i></a>
+        </li>
+        <li class="list-group-item-light">
+          <a
+            href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
+              class="fab fa-soundcloud icon"></i></a>
+        </li>
+      </ul>
     </div>
   </div>
 
