--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -141,6 +141,25 @@
                 </a>
             </div>
             <div class="col">
+                <!--<a class="a_ref" href="">-->
+                    <div class="card card_pr">
+                        <img src="../../img/spotyScripts_logo.png" class="img_pr" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_prMain">SpotiScripts</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                A bunch of script that automates different actions in Spotify, run at a specific time and accesses external databases for songs. 
+                            </p>
+                        </div>
+                    </div>
+                <!--</a>-->
+            </div>
+            <div class="col">
                 <a class="a_ref" href="./webpage_project.html">
                     <div class="card card_pr">
                         <img src="../../img/PKLLogoBewerbung.png" class="img_pr" alt="Los Angeles Skyscrapers" />
