--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -17,7 +17,7 @@
     <div class="container max-w-screen-xl pt-5">
         <div class="containerAnimRev">
             <div class="alignCenter">
-                <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
+                <img src="/img/index/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
             </div>
             <div class="container_ref">
                 <div class="row justify-content-center">
@@ -43,7 +43,7 @@
             <div class="col">
                 <a class="a_ref" href="./ProcessDokuBa_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -63,7 +63,7 @@
             <div class="col">
                 <a class="a_ref" href="./nudelcloud_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/nudelcloud.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/nudelcloud.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -83,7 +83,7 @@
             <div class="col">
                 <a class="a_ref" href="./nudelsearch_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/nudelsearch_logofullquad.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/nudelsearch_logofullquad.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -103,7 +103,7 @@
             <div class="col">
                 <a class="a_ref" href="./homeassistant_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/homeassistant/nudelHome.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/nudelHome.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -123,7 +123,7 @@
             <div class="col">
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
+                        <img src="../../img/projectIcons/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -141,9 +141,9 @@
                 </a>
             </div>
             <div class="col">
-                <!--<a class="a_ref" href="">-->
+                <a class="a_ref" href="./spotyPy_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/spotyScripts_logo.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/spotyScripts_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -157,12 +157,12 @@
                             </p>
                         </div>
                     </div>
-                <!--</a>-->
+                </a>
             </div>
             <div class="col">
                 <a class="a_ref" href="./webpage_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/PKLLogoBewerbung.png" class="img_pr" alt="Los Angeles Skyscrapers" />
+                        <img src="../../img/projectIcons/PKLLogoBewerbung.png" class="img_pr" alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -181,7 +181,7 @@
             <div class="col">
                 <a class="a_ref" href="./mycroft_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/mycroft_logo.jpg" class="img_pr" alt="Los Angeles Skyscrapers" />
+                        <img src="../../img/projectIcons/mycroft_logo.jpg" class="img_pr" alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -199,7 +199,7 @@
             <div class="col">
                 <a class="a_ref" href="./youstage_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/YouStageLogo1.png" class="img_pr" alt="Palm Springs Road" />
+                        <img src="../../img/projectIcons/YouStageLogo1.png" class="img_pr" alt="Palm Springs Road" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
