--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -17,7 +17,7 @@
   <div class="container max-w-screen-xl row_pr">
     <div class="projectAnim1">
       <div class="alignCenter">
-        <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
+        <img src="/img/index/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
       </div>
       <div class="container_ref">
         <div class="row justify-content-center">
