--- a/html/pages/spotyPy_project.html
+++ b/html/pages/spotyPy_project.html
@@ -37,8 +37,8 @@
           </div>
         </div>
       </div>
-      <h1 class="header1">NudelCloud</h1>
-      <h1 class="header2">Privacy Cloud</h1>
+      <h1 class="header1">SpotiBot</h1>
+      <h1 class="header2">Playlist Update Bot</h1>
     </div>
     <div class="container max-w-screen-xl row_pr">
       <div id="carouselExampleDark" class="carousel carousel-dark mb-5 slide projectAnim2" data-bs-ride="carousel">
@@ -52,27 +52,27 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../../img/nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD"
+            <img src="../../img/spotibot/spotibot_playlists.png" class="d-block w-100 rounded2 zoomD"
               alt="Cloud Login Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">LogIn Page.</h5>
-              <p class="text_prWhite">Log into the cloud with different users.</p>
+              <h5 class="header_pr">Sample Playlists.</h5>
+              <p class="text_prWhite">A few early stage playlist covers.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../img/nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD"
+            <img src="../../img/spotibot/commandlineSample.png" class="d-block w-100 rounded2 zoomD"
               alt="Cloud Dashboard Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Dashboard.</h5>
-              <p class="text_prWhite">Check all different services via the dashbard.</p>
+              <h5 class="header_pr">Command Line Log.</h5>
+              <p class="text_prWhite">A sample of how the bot logs all its steps and errors.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../img/nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD"
+            <img src="../../img/spotibot/spotifyPlaylist_example.png" class="d-block w-100 rounded2 zoomD"
               alt="File Browser Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
-              <h5 class="header_pr">Files.</h5>
-              <p class="text_prWhite">Browse all your files with the file browser.</p>
+              <h5 class="header_pr">Spotify View.</h5>
+              <p class="text_prWhite">A sample of the playlists on spotify.</p>
             </div>
           </div>
         </div>
@@ -91,88 +91,38 @@
           <h5 class="card-header header_pr">About the Project</h5>
           <div class="card-body">
             <h5 class="card-title">Task</h5>
-            <p class="card-text">With this little project, I have deployed my own cloud, based on Nextcloud.
+            <p class="card-text">This project initially startet with the intention of learning python and my spotify passion.
             </p>
             <h5 class="card-title">Functionality</h5>
             <p class="card-text">
-              This Cloud-Storage is selfhosted at a german server provider to get the best of both sides being
-              performance and privacy. Due to the location being in the EU the data protection law is a lot better
-              than all the other providers such as Google or Microsoft wich are hosting in the USA. Furthermore
-              Nextcloud is open-source and offers a lot of extra features such as an email client,
-              office tools, calender and a lot more. I am Using it as my Hub for everything important during my
-              daily routine. For more information visit:
-            </p>
-            <a href="https://nextcloud.com/athome/">https://nextcloud.com/athome/</a>
-          </div>
-        </div>
-        <div class="card mb-5 card_pr">
-          <h5 class="card-header header_pr">Source Project</h5>
-          <div class="card-body">
-            <h5 class="card-title">Source Project</h5>
-            <p class="card-text"><a href="https://nextcloud.com/"
-                style="text-decoration: none;">https://nextcloud.com/</a></p>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">GitHub</h5>
-            <p class="card-text"><a href="https://github.com/nextcloud/server"
-                style="text-decoration: none;">https://github.com/nextcloud/server</a></p>
+                This project is based on Python. Its main function is to automatically edit playlists in Spotify. With a given 
+                seed from different databases the bot collects many new and popular songs.
+                This has the huge advantage of getting the best collection of songs from the 
+                huge amount of different sources. 
+                Every Saturday at midnight, the bot then sorts the list of songs by release 
+                date, deletes duplicates, truncates the list to a total of 100 songs and 
+                automatically adds them to Spotify. 
+                This process can be done for any genre and is not limited by the number of 
+                databases. Future plans include integrating the popularity coefficient of 
+                users, increasing the number of databases and implementing a web interface.
           </div>
         </div>
         <div class="card mb-5 card_pr">
           <h5 class="card-header header_pr">Components</h5>
           <div class="card-body">
             <div>
-              <h3 class="ls-tight font-bolder display-9 mb-3 m-3">PHP</h3>
+              <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Python</h3>
               <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:61.0%" aria-valuenow="60.1"
-                  aria-valuemin="0" aria-valuemax="100">61.0%</div>
-              </div>
-            </div>
-            <div>
-              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
-              <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:34.1%" aria-valuenow="34.1"
-                  aria-valuemin="0" aria-valuemax="100">34.1%</div>
-              </div>
-            </div>
-            <div>
-              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Vue</h3>
-              <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:2.1%" aria-valuenow="2.1" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-                <div class="px-2">2.1%</div>
-              </div>
-            </div>
-            <div>
-              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Gherkin</h3>
-              <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:1.4%" aria-valuenow="1.4" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-                <div class="px-2">1.4%</div>
-              </div>
-            </div>
-            <div>
-              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">SCSS</h3>
-              <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:0.6%" aria-valuenow="0.6" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-                <div class="px-2">0.6%</div>
+                <div class="progress-bar" role="progressbar" style="--value:97.7%" aria-valuenow="60.1"
+                  aria-valuemin="0" aria-valuemax="100">97.7%</div>
               </div>
             </div>
             <div>
               <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
               <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:0.3%" aria-valuenow="0.3" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-                <div class="px-2">0.3%</div>
-              </div>
-            </div>
-            <div>
-              <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
-              <div class="progress m-3">
-                <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.5" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-                <div class="px-2">0.5%</div>
+                <div class="progress-bar" role="progressbar" style="--value:2.3%" aria-valuenow="34.1"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="px-2">2.3%</div>
               </div>
             </div>
           </div>
