--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="shortcut icon" href="/img/LogoGreenRounded.ico">
+  <link rel="shortcut icon" href="/img/index/LogoGreenRounded.ico">
 </head>
 
 <body>
   <div class="container max-w-screen-xl p-5 containerAnim">
 
     <div class="alignCenter">
-      <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
+      <img src="/img/index/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
     </div>
     <div class="container_ref">
       <div class="row justify-content-center">
@@ -110,7 +110,7 @@
 
         <!--Show small image only in Media Size < Large-->
         <div class="imgsmall d-block d-lg-none col-12 col-lg-6 ms-lg-auto">
-          <img src="/img/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
+          <img src="/img/index/elementary_zellberg.png" class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
@@ -120,7 +120,7 @@
             I am a passionate and well structured student getting into Business Informatics (Bachelor),
             specializing in Data Science and Process Mining with a focus on Projectmanagement.<br />
           </p>
-          <img src="/img/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <img src="/img/index/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
             Graduation<br />Gymnasium.
           </h1>
@@ -129,7 +129,7 @@
             informatics as well as mathematics and physics at the Phillip Melanchton
             Gymnasium Meine.
           </p>
-          <img src="/img/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <img src="/img/index/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
           <p class="lead mb-10 paraAnimSmall">
             From 2012 - 2015 I have been living in the United Staates of
@@ -141,14 +141,14 @@
             which has a focus on teaching in english, but providing the high
             Standards of German education.
           </p>
-          <img src="/img/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <img src="/img/index/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
 
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
           <p class="lead mb-10 paraAnimSmall">
             My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
             There I was able to construct the foundations for all my steps ahead.
           </p>
-          <img src="/img/elementary_zellberg.png"
+          <img src="/img/index/elementary_zellberg.png"
             class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
 
           <h1 class="ls-tight font-bolder display-3 pt-5 headerAnim">Certificates.</h1>
@@ -163,7 +163,7 @@
         <div class="col-12 col-lg-6 ms-lg-auto paraAnimSmall">
           <!--Show big image only in Media Size = Large-->
           <div class="d-none d-lg-block">
-            <img src="/img/portrait_full_cropped.jpg"
+            <img src="/img/index/portrait_full_cropped.jpg"
               class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
           </div>
 
@@ -187,6 +187,13 @@
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75" aria-valuemin="0"
                 aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5"> Python </h3>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="--value:50%" aria-valuenow="15" aria-valuemin="0"
+                aria-valuemax="50"></div>
             </div>
           </div>
           <div>
