new tags and minor changes

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </h1>
           <p class="lead mb-10 paraAnimSmall">
             I am a passionate and well structured student getting into Business Informatics (Bachelor),
-            specializing in Data Science and Process Mining with a focus on Projectmanagement.<br />
+            specializing in Cloud- and Webdevelopement as well as Process Mining with a focus on Projectmanagement.<br />
           </p>
           <img src="/img/index/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
