--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -17,7 +17,7 @@
     <div class="container max-w-screen-xl pt-5">
         <div class="containerAnimRev">
             <div class="alignCenter">
-                <img src="/img/index/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo"/>
+                <img src="/img/index/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" alt="Logo" />
             </div>
             <div class="container_ref">
                 <div class="row justify-content-center">
@@ -43,7 +43,8 @@
             <div class="col">
                 <a class="a_ref" href="./ProcessDokuBa_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/projectIcons/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/bachelorSeehafenAR_logo.png" class="img_pr"
+                            alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -56,6 +57,16 @@
                                 This is my bachelor thesis in which i developed Augmented-Reality-Tools to
                                 document processes in logistics.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">C#</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -73,9 +84,25 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                My own public cloud based on Nextcloud, offering a variety of functions, 
+                                My own public cloud based on Nextcloud, offering a variety of functions,
                                 applications and a lot more.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">PHP</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">JS</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -83,7 +110,8 @@
             <div class="col">
                 <a class="a_ref" href="./nudelsearch_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/projectIcons/nudelsearch_logofullquad.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/projectIcons/nudelsearch_logofullquad.png" class="img_pr"
+                            alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -96,6 +124,22 @@
                                 My own public search engine based on Searxng. I deployed this solution due to privacy
                                 concerns and security reasons.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Python</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">HTML</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -116,6 +160,22 @@
                                 Here I deployed my own Homeserver for all my Smart-Home-Devices.
                                 It runs locally on a raspberry pi.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Docker</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Bash</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -123,7 +183,8 @@
             <div class="col">
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/projectIcons/trintelV4_transparentB.jpg" class="img_pr" alt="Trintel Logo" />
+                        <img src="../../img/projectIcons/trintelV4_transparentB.jpg" class="img_pr"
+                            alt="Trintel Logo" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -136,6 +197,28 @@
                                 This was a team project with a couple of students as a Uni project.
                                 We constructed a web app for a "Planspiel" at the RBZ Kiel.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Java</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">HTML</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">CSS</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -153,8 +236,19 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                A python bot that automates different actions in Spotify, run at a specific time and accesses external databases for songs. 
+                                A python bot that automates different actions in Spotify, run at a specific time and
+                                accesses external databases for songs.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Python</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -162,7 +256,8 @@
             <div class="col">
                 <a class="a_ref" href="./webpage_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/projectIcons/PKLLogoBewerbung.png" class="img_pr" alt="Los Angeles Skyscrapers" />
+                        <img src="../../img/projectIcons/PKLLogoBewerbung.png" class="img_pr"
+                            alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -174,6 +269,22 @@
                                 A web page built from scratch to return to HTML & CSS. Furthermore I
                                 learned about DNS management.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">HTML</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">CSS</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -181,7 +292,8 @@
             <div class="col">
                 <a class="a_ref" href="./mycroft_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/projectIcons/mycroft_logo.jpg" class="img_pr" alt="Los Angeles Skyscrapers" />
+                        <img src="../../img/projectIcons/mycroft_logo.jpg" class="img_pr"
+                            alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -192,6 +304,22 @@
                             </div>
                             <p class="text_pr">In this project, I wanted to deploy my own voice assistant because of
                                 privacy concerns with my Google Assistant.</p>
+                                <div>
+                                    <div class="row">
+                                        <div class="col-3">
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                    aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Python</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3">
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                    aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Shell</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </a>
@@ -212,6 +340,16 @@
                                 This is a prototype for a concept application to begin with flutter.
                                 Originally it was a student project.
                             </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="--value:100%"
+                                                aria-valuenow="92.6" aria-valuemin="0" aria-valuemax="100">Dart</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -221,6 +359,9 @@
             <p class="footer headerAnim">© Philo Klemenz 2022</p>
         </footer>
         </head>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
