fix Images at nudelcloud_project.html

--- a/html/pages/nudelcloud_project.html
+++ b/html/pages/nudelcloud_project.html
@@ -52,7 +52,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../../img/nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD"
+            <img src="../../img/Nudelcloud/Cloud Login.png" class="d-block w-100 rounded2 zoomD"
               alt="Cloud Login Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">LogIn Page.</h5>
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../img/nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD"
+            <img src="../../img/Nudelcloud/CloudDashboard.png" class="d-block w-100 rounded2 zoomD"
               alt="Cloud Dashboard Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">Dashboard.</h5>
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../img/nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD"
+            <img src="../../img/Nudelcloud/CloudFiles.png" class="d-block w-100 rounded2 zoomD"
               alt="File Browser Image">
             <div class="carousel-caption d-none d-md-block bg-dark rounded2 bg-opacity-50">
               <h5 class="header_pr">Files.</h5>
