--- a/html/pages/ProcessDokuBa_project.html
+++ b/html/pages/ProcessDokuBa_project.html
@@ -31,7 +31,7 @@
           <div class="col-auto">
             <div class="card_NavDeac">
               <a class="a_ref" href="./projects.html">
-                <h1 class="text-white p-2 m-2">Projects</h1>
+                <h1 class="text-white p-2 m-2">Portfolio</h1>
               </a>
             </div>
           </div>
