--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="shortcut icon" href="/img/index/LogoGreenRounded.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         <div class="col-auto">
           <div data-animation="1" class="card_Ac">
             <a class="a_ref" href="/html/pages/projects.html">
-              <h1 class="text_navlink p-2 m-2">Projects</h1>
+              <h1 class="text_navlink p-2 m-2">Portfolio</h1>
             </a>
           </div>
         </div>
@@ -110,54 +111,116 @@
 
         <!--Show small image only in Media Size < Large-->
         <div class="imgsmall d-block d-lg-none col-12 col-lg-6 ms-lg-auto">
-          <img src="/img/index/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
+          <img src="/img/index/portrait_half_cropped.jpg"
+            class="img-fluid shadow-4 position-relative rounded2 headerAnim" />
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
-          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
-            PMO <br /> @ ITU Consult GmbH.
-          </h1>
-          <p class="lead mb-10 paraAnimSmall">
-            I am working full-time at the ITU Consult GmbH in the Project Management Office (PMO). 
-            My job is to organize the team and help with all kinds of paperwork during each phase of the project.
-          </p>
-          <img src="/img/index/itucLogo.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
-          <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
-            Student at CAU<br />Business Informatics.
-          </h1>
-          <p class="lead mb-10 paraAnimSmall">
-            I am a passionate and well structured student getting into Business Informatics (Bachelor),
-            specializing in Cloud- and Webdevelopement as well as Process Mining with a focus on Projectmanagement.<br />
-          </p>
-          <img src="/img/index/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
-            Graduation<br />Gymnasium.
-          </h1>
-          <p class="lead mb-10 paraAnimSmall">
-            I graduated from the gymnasium in 2019 with priorities in
-            informatics as well as mathematics and physics at the Phillip Melanchton
-            Gymnasium Meine.
-          </p>
-          <img src="/img/index/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
-          <p class="lead mb-10 paraAnimSmall">
-            From 2012 - 2015 I have been living in the United Staates of
-            America improving my English and furthermore getting to know the
-            American culture.
-          </p>
-          <p class="lead mb-10 paraAnimSmall">
-            There I have been studying at the German School Washington DC
-            which has a focus on teaching in english, but providing the high
-            Standards of German education.
-          </p>
-          <img src="/img/index/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
-
-          <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
-          <p class="lead mb-10 paraAnimSmall">
-            My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
-            There I was able to construct the foundations for all my steps ahead.
-          </p>
-          <img src="/img/index/elementary_zellberg.png"
-            class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="main-timeline">
+                  <div class="timeline"></div>
+                  <div class="timeline">
+                    <div class="timeline-content">
+                      <div class="timeline-year">today<br /> - <br />2024</div>
+                      <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                      <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
+                        PMO <br /> @ ITU Consult GmbH.
+                      </h1>
+                      <p class="description">
+        
+                      <p class="lead mb-10 paraAnimSmall">
+                        I am working full-time at the ITU Consult GmbH in the Project Management Office (PMO).
+                        My job is to organize the team and help with all kinds of paperwork during each phase of the project.
+                      </p>
+                      <img src="/img/index/itucLogo.png"
+                        class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+                      </p>
+                    </div>
+                  </div>
+                  <div class="timeline"></div>
+                  <div class="timeline">
+                    <div class="timeline-content">
+                      <div class="timeline-year">2023<br /> - <br />2019</div>
+                      <div class="timeline-icon"><i class="fa fa-graduation-cap"></i></div>
+                      <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
+                        Student at CAU<br />Business Informatics.
+                      </h1>
+                      <p class="description">
+                      <p class="lead mb-10 paraAnimSmall">
+                        I am a passionate and well structured student getting into Business Informatics (Bachelor),
+                        specializing in Cloud- and Webdevelopement as well as Process Mining with a focus on
+                        Projectmanagement.<br />
+                      </p>
+                      <img src="/img/index/uni_cau.jpg"
+                        class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+                      </p>
+                    </div>
+                  </div>
+        
+                  <div class="timeline"></div>
+                  <div class="timeline">
+                    <div class="timeline-content">
+                      <div class="timeline-year">2019<br /> - <br />2011</div>
+                      <div class="timeline-icon"><i class="fa fa-graduation-cap"></i></div>
+                      <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">
+                        Graduation<br />Gymnasium.
+                      </h1>
+                      <p class="description">
+                      <p class="lead mb-10 paraAnimSmall">
+                        I graduated from the gymnasium in 2019 with priorities in
+                        informatics as well as mathematics and physics at the Phillip Melanchton
+                        Gymnasium Meine.
+                      </p>
+                      <img src="/img/index/gymnasium_pmg.png"
+                        class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+                      </p>
+                    </div>
+                  </div>
+                  <div class="timeline"></div>
+                  <div class="timeline">
+                    <div class="timeline-content">
+                      <div class="timeline-year">2015<br /> - <br />2012</div>
+                      <div class="timeline-icon"><i class="fa fa-graduation-cap"></i></div>
+                      <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">America.</h1>
+                      <p class="description">
+                      <p class="lead mb-10 paraAnimSmall">
+                        From 2012 - 2015 I have been living in the United Staates of
+                        America improving my English and furthermore getting to know the
+                        American culture.
+                      </p>
+                      <p class="lead mb-10 paraAnimSmall">
+                        There I have been studying at the German School Washington DC
+                        which has a focus on teaching in english, but providing the high
+                        Standards of German education.
+                      </p>
+                      <img src="/img/index/gymnasium_gis.png"
+                        class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+                      </p>
+                    </div>
+                  </div>
+                  <div class="timeline"></div>
+                  <div class="timeline">
+                    <div class="timeline-content">
+                      <div class="timeline-year">2011<br /> - <br />2007</div>
+                      <div class="timeline-icon"><i class="fa fa-graduation-cap"></i></div>
+                      <h1 class="ls-tight font-bolder display-3 mb-5 pt-5 headerAnim">Elementry School.</h1>
+                      <p class="lead mb-10 paraAnimSmall">
+                      <p class="description">
+                        <p class="lead mb-10 paraAnimSmall">
+                        My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
+                        There I was able to construct the foundations for all my steps ahead.
+                        </p>  
+                      </p>
+                      <img src="/img/index/elementary_zellberg.png"
+                        class="img-fluid shadow-4 position-relative rounded2 my-5 imgAnimSmall" />
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <h1 class="ls-tight font-bolder display-3 pt-5 headerAnim">Certificates.</h1>
           <h1 class="ls-tight display-6 mb-5 pt-5 headerAnim">Completed</h1>
@@ -259,6 +322,7 @@
     </div>
   </div>
   </div>
+
   <footer>
     <p class="footer headerAnim"> © Philo Klemenz 2022 </p>
   </footer>
