--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="col-auto">
           <div data-animation="1" class="card_Ac">
             <a class="a_ref" href="/html/pages/projects.html">
-              <h1 class="text_navlink p-2 m-2">Projects</h1>
+              <h1 class="text_navlink p-2 m-2">Portfolio</h1>
             </a>
           </div>
         </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-12 col-lg-5 mb-10 mb-lg-0">
           <h1 class="ls-tight font-bolder display-3 mb-5 headerAnim">
-            Projectmanagement <br /> @ ITU Consult GmbH.
+            Process-<br />management <br /> @ ITU Consult GmbH.
           </h1>
           <p class="lead mb-10 paraAnimSmall">
             I am working full-time at the ITU Consult GmbH in the Projectmanagment.
